glx/testdata/invalid/archive-missing-fields.glx
# Invalid: Multiple entities with missing required fields
events:
  event-no-type:
    # ERROR: Missing required 'type' field
    date: "1850-01-15"

places:
  place-no-name:
    # ERROR: Missing required 'name' field
    type: "city"

sources:
  source-no-title:
    # ERROR: Missing required 'title' field
    author: "Unknown"

relationships:
  rel-no-type:
    # ERROR: Missing required 'type' field
    participants:
      - person: person-nonexistent
        role: spouse

repositories:
  repo-no-name:
    # ERROR: Missing required 'name' field
    type: "archive"

